# fnerd-falconpy

./: .env.example  .gitattributes  .gitignore  CREDITS.md  DEPENDENCIES.md  DEPENDENCY_SETUP_SUMMARY.md  FINAL_STATUS.md  GITHUB_PREP_STATUS.md  GIT_LFS_SETUP.md  INSTALL.md  LICENSE  MANIFEST.in  PACKAGE_RENAME_SUMMARY.md  README.md  config.yaml.example  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  AUTOMATED_PIPELINE_IMPLEMENTATION.md  CAPABILITY_EXPANSION_PLAN.md  CONFIGURATION.md  DEVICE_DISCOVERY.md  FEATURE_MATRIX.md  FalconPy_API_Reference.md  GITHUB_READY_CHECKLIST.md  HOST_ISOLATION.md  KAPE_COMPREHENSIVE_GUIDE.md  KAPE_ENTERPRISE_DEPLOYMENT.md  KAPE_PERFORMANCE.md  KAPE_TARGET_SELECTION_GUIDE.md  PACKAGE_SUMMARY.md  PIPELINE_IMPLEMENTATION_PLAN.md  RTR_DEVELOPMENT_GUIDE.md  RTR_FEATURE_SUMMARY.md  S3_UPLOAD_VERIFICATION_GUIDE.md  TRIAGE_GUIDE.md  UAC_COMPREHENSIVE_GUIDE.md  UAC_CUSTOM_PROFILES.md  UAC_ENTERPRISE_DEPLOYMENT.md  UAC_PERFORMANCE.md  UAC_QUICKSTART.md  VERSION_COMPARISON.md  WEB_DASHBOARD_ARCHITECTURE.md  WORKSPACE_CONFIG.md
examples/: discovery_example.py  rtr_usage.py  uac_usage.py
fnerd_falconpy/: README.md  __init__.py  orchestrator.py  orchestrator_optimized.py
fnerd_falconpy/api/: README.md  __init__.py  clients.py  clients_optimized.py  hosts_client.py
fnerd_falconpy/cli/: README.md  __init__.py  main.py
fnerd_falconpy/collectors/: README.md  __init__.py  collectors.py  uac_collector.py  uac_collector.py.backup
fnerd_falconpy/core/: README.md  __init__.py  base.py  configuration.py
fnerd_falconpy/discovery/: __init__.py  device_discovery.py
fnerd_falconpy/managers/: README.md  __init__.py  managers.py
fnerd_falconpy/resources/: deploy_kape.ps1  deploy_uac.sh
fnerd_falconpy/response/: README.md  (+3 more)
scripts/: build_uac_package.py  setup_dependencies.sh  update_uac.py
tools/: analyze_device_csv.py
(+13 files in other folders)
